spacing for bios and footer corrections

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -2,3 +2,29 @@
  font-family: quicksand-medium;
  opacity:0.8;
 }
+
+.about_page .card {
+    box-shadow: none !important;
+}
+
+.cards{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+/*.cards .col .m6{
+    flex: 0 1 calc(50% - 1em);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.12),0 1px 5px 0 rgba(0,0,0,.2);
+}*/
+
+@media only screen and (max-width: 400px) {
+    .cards .col.m6{
+        flex: 0 1 calc(100% - 1em) !important;        
+    }
+}
+.cards .col.m6{
+    flex: 0 1 calc(50% - 1em);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.12),0 1px 5px 0 rgba(0,0,0,.2);
+    margin-bottom: 15px;
+}
