--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -53,6 +53,7 @@
 
 .container-flag {
   background: url(../../assets/feed.png);
+  margin-bottom: -24px;
 }
 
 .Black-text {
